# TitanCAD

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: grid.frag  grid.vert  simple.frag  simple.vert
src/: main.cpp  shader.cpp  shader.h  simple.frag  simple.vert
src/Core/: Application.cpp  Application.h
src/Renderer/: camera.cpp  camera.h  shader.cpp  shader.h
